<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="andlib.ashrafulbd.com.workflowmapperlibsample.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_your_lucky_day"/>
        <TextView
            android:id="@+id/txtLuckyDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnOpenLanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_margin="5dp"
        android:text="@string/btn_txt_open_landing"
        android:onClick="openLanding"/>

    <Button
        android:id="@+id/btnOpenHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_margin="5dp"
        android:text="@string/btn_txt_open_home"
        android:onClick="openHome"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_margin="5dp"
        android:text="@string/btn_txt_random_day"
        android:onClick="findRandomDay"/>

</LinearLayout>
