<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="andlib.ashrafulbd.com.workflowmapperlibsample.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_your_lucky_color"/>

        <View
            android:id="@+id/vwRandomColor"
            android:layout_width="30dp"
            android:layout_height="15dp"
            android:layout_margin="5dp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnOpenLanding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_margin="5dp"
        android:text="@string/btn_txt_open_landing"
        android:onClick="openLanding"/>

    <Button
        android:id="@+id/btnOpenDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_margin="5dp"
        android:text="@string/btn_txt_open_detail"
        android:onClick="openDetail"/>

    <Button
        android:id="@+id/btnGenerateRandomColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_margin="5dp"
        android:text="@string/btn_txt_generate_random_color"
        android:onClick="generateRandomColor"/>



</LinearLayout>
