<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="andlib.ashrafulbd.com.workflowmapperlibsample.LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/txt_your_luky_num_is"/>

        <TextView
            android:id="@+id/txtRandomNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnOpenHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_open_home"
        android:ems="12"
        android:layout_margin="10dp"
        android:onClick="openHome"/>

    <Button
        android:id="@+id/btnOpenDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_margin="10dp"
        android:text="@string/btn_txt_open_detail"
        android:onClick="openDetail"/>

    <Button
        android:id="@+id/btnGenerateRandomNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:layout_margin="10dp"
        android:text="@string/btn_txt_generate_random_num"
        android:onClick="generateRandomNumber"/>

</LinearLayout>
